WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139805
Fix build break on EFL and GTK since
r177523
https://bugs.webkit.org/show_bug.cgi?id=139805
Summary
Fix build break on EFL and GTK since r177523
Gyuyoung Kim
Reported
2014-12-18 19:47:28 PST
r177523
made build break on EFL and GTK ports.
Attachments
Patch
(2.04 KB, patch)
2014-12-18 19:48 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(1.01 KB, patch)
2014-12-18 22:32 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2014-12-18 19:48:14 PST
Created
attachment 243537
[details]
Patch
Anders Carlsson
Comment 2
2014-12-18 21:35:55 PST
Comment on
attachment 243537
[details]
Patch This isn't the right fix - the right fix is t make sure that the definition in wtf/StdLibExtras.h is used on versions less than 4.9.0!
Gyuyoung Kim
Comment 3
2014-12-18 22:32:04 PST
Created
attachment 243543
[details]
Patch
Gyuyoung Kim
Comment 4
2014-12-18 22:33:42 PST
(In reply to
comment #2
)
> Comment on
attachment 243537
[details]
> Patch > > This isn't the right fix - the right fix is t make sure that the definition > in wtf/StdLibExtras.h is used on versions less than 4.9.0!
Anders, Ref.h seems to need to include <wtf/StdLibExtras.h> explicitly. EFL and GTK port don't recognize std::exchange() defined in wtf/StdLibExtras.h.
Csaba Osztrogonác
Comment 5
2014-12-18 23:12:24 PST
Comment on
attachment 243543
[details]
Patch rs=me
WebKit Commit Bot
Comment 6
2014-12-18 23:45:29 PST
Comment on
attachment 243543
[details]
Patch Clearing flags on attachment: 243543 Committed
r177568
: <
http://trac.webkit.org/changeset/177568
>
WebKit Commit Bot
Comment 7
2014-12-18 23:45:33 PST
All reviewed patches have been landed. Closing bug.
Anders Carlsson
Comment 8
2014-12-19 08:55:52 PST
Ah, sorry about that. Thanks for fixing!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug