Fix build break on EFL and GTK since r177523 https://bugs.webkit.org/show_bug.cgi?id=139805

Reviewed by Csaba Osztrogonác.

* wtf/Ref.h: Include <wtf/StdLibExtras.h> to use std::exchange().


Canonical link: https://commits.webkit.org/157734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177568 268f45cc-cd09-0410-ab3c-d52691b4dbfc